# wakeabcbot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  run.py  run.sh  test_notification.py  test_setup.py
src/wakeabcbot/: __init__.py  bot.py  config.py  database.py  inventory_scraper.py  main.py  message_loader.py  monitor.py  utils.py
src/wakeabcbot/messages/: __init__.py  add_help.txt  add_success.txt  help.txt  notification_footer.txt  remove_not_found.txt  remove_success.txt  watchlist_empty.txt  watchlist_tips.txt  welcome.txt
